--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,8 +6,10 @@
   },
   "extends": ["airbnb-base", "prettier"],
   "parserOptions": {
-    "ecmaVersion": 13
+    "ecmaVersion": "latest"
   },
   "plugins": ["prettier"],
-  "rules": {}
+  "rules": {
+    "no-console": "off"
+  }
 }
