--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "format": "prettier --write ./src/**/*.js",
-    "lint": "eslint ./src/**/*.js"
+    "lint": "eslint ./src/**/*.js",
+    "start": "nodemon ./src/index.js"
   },
   "repository": {
     "type": "git",
@@ -30,5 +31,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.4.1"
+  },
+  "dependencies": {
+    "colors": "^1.4.0"
   }
 }
